# SyroySync

./: -files  .gitignore  APIPage.qml  CMakeLists.txt  IntroPage.qml  LoadPage.qml  Main.qml  README.md  WebsitePage.qml  config.template.json  intro.qml  licenses.rtf  main.cpp  updater.cpp  updater.h  version.json  videomodel.cpp  videomodel.h  youtubeservice.cpp  youtubeservice.h
qml/: APIPage.qml  DownloadDrawer.qml  Information.qml  IntroPage.qml  LoadPage.qml  Main.qml  SettingsPage.qml  WebsitePage.qml  inputOverview.qml
qml/resources/data/: extensions.json
src/: BaseDownloader.h  app.rc  basedownloader.h  downloadjob.cpp  downloadjob.h  downloadmanager.cpp  downloadmanager.h  downloadservice.cpp  downloadservice.h  structures.h  updater.cpp  updater.h  videomodel.cpp  videomodel.h  youtubeservice.cpp  youtubeservice.h  ytdlpplugin.cpp  ytdlpplugin.h
